STYLE: remove test navbar and add some basic styling

--- a/assets/css/alnurstyle.css
+++ b/assets/css/alnurstyle.css
@@ -1,3 +1,15 @@
+#main-menu {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  list-style: none;
+}
 
+@media only screen and (max-width: 991px) {
+  #main-menu {
+    flex-direction: column;
+    gap: 0;
+  }
+}
 
 /*# sourceMappingURL=alnurstyle.css.map */
